--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ nav a:hover{   /*lorsqu'on survole un bouton*/
 
 .sous{
     display: none;
-    box-shadow: 0px 1px 2px white;
+    /*box-shadow: 0px 1px 2px white;*/
     /*background-color: white;*/
     position: absolute;
     width: 100%;
