--- a/index.css
+++ b/index.css
@@ -1,17 +1,16 @@
 /* ma réalisation */
-html{
-  background: linear-gradient( rgb(233, 128, 128), rgb(255, 255, 255));
+
+html, body {
+  height: 150vh;
+  background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));
+  overflow: hidden;
 }
+
 button
 {
   border: 0px;
   padding: center;
   margin-left: 20px;
-}
-
-header
-{
-  /*background-color: rgb(248, 248, 248);*/
 }
 
 #titre
@@ -197,17 +196,17 @@ nav > ul li:hover .sous{
 
 /* menu burger */
 
-body
+/* body
 {
   margin: 0;
-  padding: 0;
+  padding: 0; */
   
   
   /* These controls the font, links (including rollover/hover) and background colours*/
   /*background: rgb(248, 248, 248);*/
-  color: #ffffff;
+  /* color: #ffffff;
   font-family: "Avenir Next", "Avenir", sans-serif;
-}
+} */
 
 a.external:link
 	{color: #0000ff; font-size: 10pt; font-weight: bold; }
