--- a/index.css
+++ b/index.css
@@ -2,7 +2,10 @@
 
 html, body {
   height: 150vh;
-  background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));
+  /*background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));*/
+  background-image: url("image/background.jpg");
+  /*background-image: no-repeat;*/
+  background-image: cover;
   overflow: hidden;
 }
 
@@ -39,24 +42,26 @@ footer table tr td
   font-size: 18px;
   color: black;
   width: 16.66%;
+  display: flex;
 }
 
-.logos_footer{
-  width: 40px;
-  height: 40px;
+#logos_footer{  /* retravailler les logos + faire une flexbox*/ 
+  vertical-align: middle;
+  
+  display: flex;
+  
 }
-
 
 #footer1{
   padding-left : 40px;
   margin-right: 60px;
   margin-bottom: 20px;
   font-size : 18px;
+  display: flex;
 }
 /* partie menu déroulant */
 
-nav
-{
+nav{
     /*background-color: rgb(248, 248, 248);*/
     width: 100%;
     height:70px;
