--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ button
   margin-left: 400px;
 }
 
-/*footer*/
+/* ancien footer
 
 footer table tr td 
 {   
@@ -34,7 +34,7 @@ footer table tr td
   vertical-align: middle;
   color : rgb(255, 255, 255);
 }
-
+*/
 .plan{
   margin-left: 100px;
   margin-right : 90px;
@@ -44,12 +44,7 @@ footer table tr td
   display: flex;
 }
 
-#logos_footer{                                            /* retravailler les logos + faire une flexbox pour le footer */ 
-  vertical-align: middle;
-  display: flex;
-  /*flex-grow: 1;*/
-}
-
+                                          /* retravailler les logos + faire une flexbox pour le footer */ 
 #footer1{
   padding-left : 40px;
   margin-right: 60px;
@@ -57,6 +52,29 @@ footer table tr td
   font-size : 18px;
   display: flex;
 }
+
+
+/*New footer avec flexbox : */
+
+#ma-boite
+{
+  display: flex;
+  font-family : Georgia ;
+  vertical-align: middle;
+  color : rgb(255, 255, 255);
+}
+
+#ma-boite div
+{
+    background-color: #FF950E;
+    margin: 1em;
+}
+
+#element2{
+   flex-grow: 1;
+}
+
+
 /* partie menu déroulant */
 
 nav{
