ajustements footer + new slidershow

--- a/index.css
+++ b/index.css
@@ -50,7 +50,10 @@ footer table tr td
   margin-bottom: 20px;
   font-size : 18px;
 }
-
+/*footer{
+  display: table-row;
+  height: 1px;
+}*/
 
 /*New footer avec flexbox : */
 
@@ -65,7 +68,7 @@ footer table tr td
 #ma-boite div
 {
   background-color: transparent;
-  margin: 1em;
+  margin: 0;
 }
 
 .element2{
@@ -152,7 +155,7 @@ nav > ul li:hover .sous{
 
 
 /* partie animation images */
-
+/*
 .slider {
     width: 700px;
     height: 500px;
@@ -220,7 +223,7 @@ nav > ul li:hover .sous{
     }
 }
 
-
+*/
 
 /* menu burger */
 
@@ -409,4 +412,73 @@ h1 {
 h6 {
 	font-size: 12px;
 	color: #FFFFFF;
+}
+
+/*test slidershow 2 */
+
+.slidershow{
+  width: 700px;
+  height: 400px;
+  overflow: hidden;
+}
+.middle{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  border: 2px solid white;
+}
+.navigation{
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+.bar{
+  width: 50px;
+  height: 10px;
+  border: 2px solid #fff;
+  margin: 6px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.bar:hover{
+  background: #fff;
+}
+
+input[name="r"]{
+    position: absolute;
+    visibility: hidden;
+}
+
+.slides{
+  width: 500%;
+  height: 100%;
+  display: flex;
+}
+
+.slide{
+  width: 20%;
+  transition: 0.6s;
+}
+.slide img{
+  width: 100%;
+  height: 100%;
+}
+
+#r1:checked ~ .s1{
+  margin-left: 0;
+}
+#r2:checked ~ .s1{
+  margin-left: -20%;
+}
+#r3:checked ~ .s1{
+  margin-left: -40%;
+}
+#r4:checked ~ .s1{
+  margin-left: -60%;
+}
+#r5:checked ~ .s1{
+  margin-left: -80%;
 }
