--- a/index.css
+++ b/index.css
@@ -108,14 +108,17 @@ nav ul::after{  /*ce qui se passe directement après ul*/
 nav a{
     display: block;
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border-bottom: 2px solid transparent;
     padding: 10px 0px;
+    background: black;
+    border-radius: 14px;
 }
 
 nav a:hover{   /*lorsqu'on survole un bouton*/
     color: rgba(255, 0, 0, 0.884);
     border-bottom: 2px solid red;
+    
 }
 
 .sous{
@@ -147,6 +150,8 @@ nav > ul li:hover .sous{
 {
   margin-left: 100px;
   font-size: 1.3em;
+  background: black;
+  border-radius: 14px;
 }
 .deroulant > a::after{
     content:" ▼";
@@ -156,7 +161,7 @@ nav > ul li:hover .sous{
 
 
 /* partie animation images */
-/*
+
 .slider {
     width: 700px;
     height: 500px;
@@ -224,7 +229,7 @@ nav > ul li:hover .sous{
     }
 }
 
-*/
+
 
 /* menu burger */
 
@@ -338,7 +343,7 @@ a:hover
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
+  background: #ffffff;
 }
 
 /*
@@ -371,9 +376,10 @@ a:hover
   margin: -76px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  background: #ffffff;
+  background: black;
   border-style:groove;
-  border-color: #00437c;
+  border-color: #ffffff;
+  
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
@@ -413,77 +419,4 @@ h1 {
 h6 {
 	font-size: 12px;
 	color: #FFFFFF;
-}
-
-
-
-
-
-/*test slidershow 2 */
-
-.slidershow{
-  width: 700px;
-  height: 400px;
-  overflow: hidden;
-}
-.middle{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  border: 2px solid white;
-}
-.navigation{
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-}
-.bar{
-  width: 50px;
-  height: 10px;
-  border: 2px solid #fff;
-  margin: 6px;
-  cursor: pointer;
-  transition: 0.4s;
-}
-.bar:hover{
-  background: #fff;
-}
-
-input[name="r"]{
-    position: absolute;
-    visibility: hidden;
-}
-
-.slides{
-  width: 500%;
-  height: 100%;
-  display: flex;
-}
-
-.slide{
-  width: 20%;
-  transition: 0.6s;
-}
-.slide img{
-  width: 100%;
-  height: 100%;
-}
-
-#r1:checked ~ .s1{
-  margin-left: 0;
-}
-#r2:checked ~ .s1{
-  margin-left: -20%;
-}
-#r3:checked ~ .s1{
-  margin-left: -40%;
-}
-#r4:checked ~ .s1{
-  margin-left: -60%;
-}
-#r5:checked ~ .s1{
-  margin-left: -80%;
 }
