--- a/billeterie.css
+++ b/billeterie.css
@@ -98,7 +98,7 @@ margin-left: 400px;
 }
 
 #panier{
-    width: 20%;
+    width: 100%;
     height: 100px;
     overflow: hidden;
     border: 2px solid white;
@@ -114,22 +114,53 @@ margin-left: 400px;
     text-align: center;
 }
 
-/*images*/
-
-#images{
-    width: 92%;
-    padding-left: 50px;
-    padding-bottom: 17px;
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-}
-#images img{
-    width: 250px;
-    height: 175px;
+#reduction{
+    width: 100%;
+    height: 327px;
+    overflow: hidden;
     border: 2px solid white;
+    background-color: #131416;
+    color: white;
+    position: relative;
+    margin-top: 40px;
+    margin-right: 60px;
+    padding-bottom: 40px;
 }
 
+#reduction input{
+    width: 140px;
+    height: 45px;
+    margin-right: 0;
+    margin-top: 5px;
+    border: 2px solid rgb(224, 33, 33);
+}
+
+#reduction button{
+    height: 51px;
+    margin-left: -8px;
+    border: 2px solid rgb(224, 33, 33);
+    background-color: rgb(224, 33, 33);
+    
+}
+
+#reduction button:hover{
+    opacity: 0.7;
+}
+
+#reduction img{
+    margin-top: 20px;
+    width: 50px;
+    height: 30px;
+}
+
+#reduction p{
+    font-size: 14px;
+}
+
+#colonne{
+    flex-direction: column;
+    text-align: center;
+}
 
 /*Partie footer */
 
