--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ button
 {
   display: flex;
   color : rgb(0, 0, 0);
-  background-color: rgb(241, 240, 240);
+  background-color:#131416;
   /*border-radius: 14px;*/
 }
 
