--- a/index.css
+++ b/index.css
@@ -7,13 +7,13 @@ html, body {
   background-size: cover;
   overflow: hidden;
 }
-
+/*
 button
 {
   border: 0px;
   padding: center;
   margin-left: 20px;
-}
+}*/
 
 #titre
 {
@@ -69,9 +69,9 @@ button
 #ma-boite
 {
   display: flex;
-  color : rgb(0, 0, 0);
+  justify-content: space-between;
   background-color:#131416;
-  /*border-radius: 14px;*/
+  border-radius: 14px;
 }
 
 #ma-boite div
@@ -90,12 +90,11 @@ button
   font-size: 18px;
   font-family : Georgia ;
   vertical-align: middle;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 #boite2{
   display: flex;
-  vertical-align: baseline;
   margin-top: 15px;
 }
 
