--- a/plan_du_site.css
+++ b/plan_du_site.css
@@ -1,45 +1,32 @@
 /* ma réalisation */
-html{
-  background: linear-gradient( rgb(233, 128, 128), rgb(255, 255, 255));
+
+html, body {
+  height: 100vh;
+  /*background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));*/
+  background-image: url("image/mont-fuji-violet-4k-rose.png");
+  background-size: cover;
+  overflow: hidden;
 }
+/*
 button
 {
-    border: 0px;
-    padding: center;
-    margin-left: 20px;
-}
+  border: 0px;
+  padding: center;
+  margin-left: 20px;
+}*/
 
 #titre
 {
-    margin-left: 10px;
-    text-align: center;
+  margin-left: 10px;
+  text-align: center;
 }
 
 #logo
 {
-    margin-left: 400px;
+  margin-left: 400px;
 }
 
-footer table tr td 
-{   
-    font-family : Georgia ;
-    vertical-align: middle;
-    color : rgb(0, 0, 0);
-    font-weight: 100;
-}
-
-.plan{
-  margin-left: 100px;
-  margin-right : 65px;
-  font-size: 18px;
-  color: black;
-}
-
-#footer1{
-  padding-left : 80px;
-  margin-right: 60px;
-  font-size : 18px;
-}
+                                                                  /* Body */
 
 #titre_plan{
   margin-left: 100px;
@@ -115,14 +102,60 @@ footer table tr td
   padding-left: 60px;
 }
 
+/*Partie footer */
 
+#ma-boite1
+{
+  display: flex;
+  justify-content: space-around;
+}
 
+#ma-boite
+{
+  display: flex;
+  justify-content: space-between;
+  background-color:#131416;
+  border-radius: 14px;
+  border: 2px solid white;
+  margin-left: 30px;
+  margin-right: 30px;
+}
 
+.plan{
+  display: flex;
+  padding-left: 80px;
+  margin-right : 90px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-size: 18px;
+  font-family : Georgia ;
+  vertical-align: middle;
+  color: rgb(255, 255, 255);
+}
 
+#boite2{
+  display: flex;
+  align-items: center;
+  margin-right: 32px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: -10px;
+  border-radius: 14px;
+  border: 2px solid #131416;
+  background-color:#ebebeb;
+}
+
+#boite2 button{
+  border: 0;
+}
+
+.plan:hover {
+  opacity: 0.4;
+}
 
 /* partie menu déroulant */
-nav
-{
+
+nav{
     /*background-color: rgb(248, 248, 248);*/
     width: 100%;
     height:70px;
@@ -151,24 +184,36 @@ nav ul::after{  /*ce qui se passe directement après ul*/
 nav a{
     display: block;
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     border-bottom: 2px solid transparent;
     padding: 10px 0px;
+    background: #131416;
+    border-radius: 14px;
+    
 }
 
 nav a:hover{   /*lorsqu'on survole un bouton*/
-    color: rgba(255, 0, 0, 0.884);
-    border-bottom: 2px solid red;
+  color: rgba(255, 0, 0, 0.884);
+  border-bottom: 2px solid red;
 }
 
 .sous{
     display: none;
-    box-shadow: 0px 1px 2px white;
+    /*box-shadow: 0px 1px 2px white;*/
     /*background-color: white;*/
     position: absolute;
     width: 100%;
     z-index: 1000;
 }
+
+
+/*.sous2
+{
+  font-size: 1.3em;
+  background: black;
+  border-radius: 14px;
+}*/
+
 nav > ul li:hover .sous{
     display: block;
 }
@@ -188,28 +233,89 @@ nav > ul li:hover .sous{
 }
 .deroulant
 {
+  text-decoration: none;
   margin-left: 100px;
   font-size: 1.3em;
+  background: #131416;
+  border-radius: 14px;
 }
+
 .deroulant > a::after{
     content:" ▼";
     font-size: 12px;
 }
 
+/* partie animation images */
+
+.slider {
+    width: 700px;
+    height: 500px;
+    overflow: hidden;
+    margin: 50px auto;
+    position: relative;
+    border: 2px solid white;
+    left: -50px;
+}
+.slides {
+    width: calc(700px * 8);
+    animation: glisse 30s infinite;
+  
+}
+.slide img{
+    float: left;
+    width:700px;
+    height:500px;
+}
+
+@keyframes glisse {
+    0% {
+        transform: translateX(0);
+    }
+    5% {
+        transform: translateX(0);
+    }
+    15% {
+        transform: translateX(-700px);
+    }
+    20% {
+        transform: translateX(-700px);
+    }
+    30% {
+        transform: translateX(-1400px);
+    }
+    35% {
+        transform: translateX(-1400px);
+    }
+    45% {
+        transform: translateX(-2100px);
+    }
+    50% {
+        transform: translateX(-2100px);
+    }
+    60% {
+        transform: translateX(-2800px);
+    }
+    65% {
+        transform: translateX(-2800px);
+    }
+    75% {
+        transform: translateX(-3500px);
+    }
+    80% {
+        transform: translateX(-3500px);
+    }
+    90% {
+        transform: translateX(-4200px);
+    }
+    99% {
+        transform: translateX(-4200px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
 
 /* menu burger */
-
-body
-{
-  margin: 0;
-  padding: 0;
-  
-  
-  /* These controls the font, links (including rollover/hover) and background colours*/
-  /*background: rgb(248, 248, 248);*/
-  color: #ffffff;
-  font-family: "Avenir Next", "Avenir", sans-serif;
-}
 
 a.external:link
 	{color: #0000ff; font-size: 10pt; font-weight: bold; }
@@ -225,13 +331,13 @@ a
 	text-decoration: none;
 	color: #00437c;
 	transition: color 0.3s ease;
-	font-size: 23px;
+  font-size: 23px;
 }
 
-a:hover
+/*a:hover
 {
   color: #feba12;
-}
+}*/
 /*
  * ...this controls the actual 3 line menu position, the 'burger'...
  */
@@ -279,7 +385,7 @@ a:hover
   margin-bottom: 5px;
   position: relative;
   
-  background: #ff0000; 
+  background: #ffffff; 
   border-radius: 3px;
   
   z-index: 1;
@@ -309,7 +415,7 @@ a:hover
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
+  background: #ffffff;
 }
 
 /*
@@ -342,9 +448,10 @@ a:hover
   margin: -76px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  background: #ffffff;
+  background: #131416;
   border-style:groove;
-  border-color: #00437c;
+  border-color: #ffffff;
+  
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
@@ -353,6 +460,10 @@ a:hover
   transform: translate(-100%, 0);
   
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu:hover{
+  border-bottom:rgba(255, 0, 0, 0.884);
 }
 
 #menu li
@@ -376,9 +487,14 @@ h1,h2,h3,h4,h5,h6 {
 	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
 }
 h1 {
-	color: black;
+	color: #f5bff1;
 }
 h6 {
 	font-size: 12px;
 	color: #FFFFFF;
 }
+
+
+
+
+
