--- a/evenements.css
+++ b/evenements.css
@@ -1,7 +1,7 @@
 /* ma réalisation */
 
 html, body {
-    height: 100%;
+    height: 100vh;
     /*background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));*/
     background-image: url("image/mont-fuji-violet-4k-rose.png");
     background-size: cover;
@@ -71,29 +71,54 @@ margin-left: 400px;
 
 /*Partie footer */
 
+#ma-boite1
+{
+  display: flex;
+  justify-content: space-around;
+}
+
 #ma-boite
 {
   display: flex;
-  color : rgb(0, 0, 0);
-  background-color: rgb(241, 240, 240);
+  justify-content: space-between;
+  background-color:#131416;
   border-radius: 14px;
-  border: 5px solid rgb(0, 0, 0);
+  border: 2px solid white;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .plan{
   display: flex;
-  margin-left: 80px;
-  margin-right : 90px;
+  padding-left: 80px;
+  margin-right : 80px;
   margin-top: 15px;
   margin-bottom: 15px;
   font-size: 18px;
   font-family : Georgia ;
-  color: rgb(0, 0, 0);
+  vertical-align: middle;
+  color: rgb(255, 255, 255);
 }
 
 #boite2{
-display: flex;
-margin-top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 32px;
+  padding-right: 12px;
+  
+  border-radius: 14px;
+  border: 2px solid #131416;
+  background-color:#ebebeb;
+}
+
+#boite2 button{
+  border: 0;
+  padding:0;
+}
+
+.plan:hover {
+  opacity: 0.4;
 }
 
 /* partie menu déroulant */
