rajout liens réseaux sociaux

--- a/forum.css
+++ b/forum.css
@@ -57,7 +57,7 @@ button
 .plan{
   display: flex;
   padding-left: 80px;
-  margin-right : 40px;
+  margin-right : 70px;
   margin-top: 15px;
   margin-bottom: 15px;
   font-size: 18px;
@@ -71,7 +71,7 @@ button
   align-items: center;
   margin-right: 32px;
   padding-right: 10px;
-  padding-left: -10px;
+  padding-left: 10px;
   padding-top: -10px;
   border-radius: 14px;
   border: 2px solid #131416;
@@ -81,6 +81,7 @@ button
 #boite2 button{
   border: 0;
   padding:0;
+  margin-left: 10px;
 }
 
 .plan:hover {
@@ -166,7 +167,7 @@ nav > ul li:hover .sous2{
     text-align: center;
 }
 .sous2 a:hover{
-    border-bottom: none;
+    border-bottom: 2px solid red;
     /*background-color: RGBa(200,200,200,0.1);*/
 }
 .deroulant
