--- a/index.css
+++ b/index.css
@@ -111,6 +111,10 @@ button
   border: 0;
 }
 
+#boite2 button:hover{
+  opacity: 0.7;
+}
+
 .plan:hover {
   opacity: 0.4;
 }
@@ -179,18 +183,18 @@ nav a:hover{   /*lorsqu'on survole un bouton*/
 }
 
 nav > ul li:hover .sous2{
-    display: block;
+  display: block;
 }
 .sous2 li{
-    display: flex;
-    float: none;
-    width: 100%;
+  display: flex;
+  float: none;
+  width: 100%;
 }
 .sous2 a{
-    padding: 10px;
-    border-bottom: none;
-    text-align: center;
+  padding: 10px;
+  text-align: center;
 }
+
 .sous2 a:hover{
     border-bottom: 2px solid red;
     /*background-color: RGBa(200,200,200,0.1);*/
@@ -422,16 +426,16 @@ a
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu:hover{
-  border-bottom:rgba(255, 0, 0, 0.884);
-}
-
 #menu li
 {
   padding: 10px 0;
   font-size: 30px;
+  border-radius: 14px;
 }
 
+#menu li:hover{
+  border-bottom: 2px solid red;
+}
 /*
  * And let's slide it in from the left
  */
