modifs burger + déroulant

--- a/evenements.css
+++ b/evenements.css
@@ -195,41 +195,41 @@ color: rgba(255, 0, 0, 0.884);
 border-bottom: 2px solid red;
 }
 
-.sous{
-    display: none;
-    /*box-shadow: 0px 1px 2px white;*/
-    /*background-color: white;*/
-    position: absolute;
-    width: 100%;
-    z-index: 1000;
+.sous2
+{
+  font-size: 1.3em;
+  background: #131416;
+  border-radius: 14px;
 }
 
-nav > ul li:hover .sous{
+#evenement .sous2{
+  margin-left: 100px;
+}
+
+nav > ul li:hover .sous2{
     display: block;
 }
-.sous li{
+.sous2 li{
     display: flex;
     float: none;
     width: 100%;
 }
-.sous a{
+.sous2 a{
     padding: 10px;
-    border-bottom: none;
     text-align: center;
 }
-.sous a:hover{
-    border-bottom: none;
+.sous2 a:hover{
+    border-bottom: 2px solid red;
     /*background-color: RGBa(200,200,200,0.1);*/
 }
 .deroulant
 {
-text-decoration: none;
-margin-left: 100px;
-font-size: 1.3em;
-background: #131416;
-border-radius: 14px;
+  text-decoration: none;
+  margin-left: 100px;
+  font-size: 1.3em;
+  background:#131416;
+  border-radius: 14px;
 }
-
 .deroulant > a::after{
     content:" ▼";
     font-size: 12px;
@@ -380,10 +380,6 @@ transform-origin: 0% 0%;
 transform: translate(-100%, 0);
 
 transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-#menu:hover{
-border-bottom:rgba(255, 0, 0, 0.884);
 }
 
 #menu li
