--- a/forum.css
+++ b/forum.css
@@ -1,10 +1,17 @@
 /* ma réalisation */
 html, body {
-  height: 100vh;
-  /*background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));*/
-  background-image: url("image/mont-fuji-violet-4k-rose.png");
+  /*background: linear-gradient(rgb(219, 219, 219), rgb(219, 219, 219));*/
+  /*background-image: linear-gradient(
+    rgba(240, 235, 235, 0.25),
+    rgba(240, 234, 234, 0.25)
+    ), url('image/mont-fuji-violet-4k-rose.png');*/
+  background-image:url('image/mont-fuji-violet-4k-rose.png'); ;
   background-size: cover;
-  overflow: hidden;
+  overflow: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 /*
 button
@@ -349,6 +356,49 @@ h6 {
 	font-size: 12px;
 	color: #FFFFFF;
 }
+                                                                     /*Commentaires*/
+#commentaire{
+  width: 91%;
+  margin: 50px auto;
+  border: 2px solid white;
+  background-color: #131416;
+  color: white;
+  padding: 1em;
+} 
+
+#commentaire h4{
+  /*color:rgba(219, 29, 29, 0.884);*/
+  color:#feba12;
+}
+
+#commentaire hr{
+  background-color: #131416; 
+  color: #ffffff; 
+  width:100%; 
+  text-align: center;
+  border:none; 
+  border-bottom: dashed #df2a2a 2px;
+  
+}
+
+#commentaire .signaler{
+  display: flex;
+  flex-direction: row;
+}
+
+#commentaire .signaler button{
+  background-color: #131416;
+  border: 2px solid white;
+  color: white;
+  padding: 10px;
+  margin: 0;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+#commentaire .signaler button:hover{
+  opacity: 0.7;
+}
 
                                                                      /*Formulaire*/
 
@@ -404,6 +454,17 @@ textarea {
 .button {
   /* Pour placer le bouton à la même position que les champs texte */
   padding-left: 90px; /* même taille que les étiquettes */
+}
+
+.button button{
+  background-color: #131416;
+  border: 2px solid white;
+  color: white;
+  padding: 10px;
+}
+
+.button button:hover{
+  opacity: 0.7;
 }
 
 button {
