--- a/evenements.css
+++ b/evenements.css
@@ -39,8 +39,8 @@ margin-left: 400px;
   position: relative;
   overflow: visible;
   color: white;
-  background-color: #131416;
-  border: 2px solid white;
+  /* background-color:rgba(13, 14, 16, 0.75); */
+  /* border: 2px solid white; */
   margin-top: 40px;
   margin-bottom: 20px;
   margin-left: 15px;
@@ -72,7 +72,7 @@ margin-left: 400px;
     height: 175px;
     border: 2px solid white;
 }
-#calendrier #element-calendrier{
+.element-calendrier{
     margin-top: 0.5em;
     margin-right: 4em;
     width: 22em;
@@ -85,20 +85,40 @@ margin-left: 400px;
     width: 22em;
     height: 13em;
 }
-#arrows{
-    display: flex;
-    justify-content: space-between;
+#testlol{
+    width: 22em;
+    height: 13em;
 }
-
-.transitionarrow{
+#rtransitionarrow{
     margin-top: auto;
-    border-left: 4em;
-    padding-right: -4em;
+    margin-left: 78em;
     margin-bottom: 4em;
-    width: 2em;
-    height: 2em;
+    width: 4em;
+    height: 4em;
+    transition: transform .2s;
 }
-
+  
+  #rtransitionarrow:hover {
+    transform: scale(1.1);
+  }
+#ltransitionarrow{
+    margin-top: auto;
+    margin-left: 1em;
+    margin-bottom: 4em;
+    width: 4em;
+    height: 4em;
+    transition: transform .2s;
+}
+  
+#ltransitionarrow:hover {
+    transform: scale(1.1); 
+  }
+.zoom{
+    transition: transform .2s;
+}
+.zoom:hover {
+    transform: scale(1.1); 
+  }
 /*Partie footer */
 
 #ma-boite1
@@ -237,21 +257,13 @@ border-radius: 14px;
 
 /* menu burger */
 
-a.external:link
-    {color: #0000ff; font-size: 10pt; font-weight: bold; }
-a.external:visited 
-    {color: #894f7b; font-weight: bold; }
-a.external:hover
-    {text-decoration: overline; background-color: #003399; }
-a.external:active
-    {color: red; }	
-    
+
 a
 {
     text-decoration: none;
     color: #00437c;
     transition: color 0.3s ease;
-font-size: 23px;
+    font-size: 23px;
 }
 
 /*a:hover
