--- a/acces.css
+++ b/acces.css
@@ -360,6 +360,7 @@ h6 {
 #commentaire{
 width: 91%;
 margin: 50px auto;
+
 border: 2px solid white;
 background-color: #131416;
 color: white;
@@ -369,6 +370,7 @@ padding: 1em;
 #commentaire h3{
     /*color:rgba(219, 29, 29, 0.884);*/
     color:#db2424;
+    margin-left: 100px;
 }
 
 #commentaire hr{
@@ -400,6 +402,22 @@ margin-bottom: 10px;
 opacity: 0.7;
 }
 
+#commentaire .adresse{
+    color: white;
+    font-size: 18px;
+    margin-left: 100px;
+}
+
+.commentaire .adresse .adresse1{
+    font-size: 8px;
+    margin-left: 100px;
+}
+
+#commentaire img{
+    width: 1000px;
+    height: 600px;
+    margin-left: 175px;
+}
 button {
 /* Cette marge supplémentaire représente grosso modo le même espace que celui
     entre les étiquettes et les champs texte */
