--- a/contact.css
+++ b/contact.css
@@ -393,7 +393,7 @@ padding: 1em;
 #commentaire .texte1 a{
     font-size: 18px;
     text-decoration: none;
-    color: white;
+    color: rgb(223, 39, 39);
 
 }
 
