--- a/evenements.css
+++ b/evenements.css
@@ -84,21 +84,17 @@ margin-left: 400px;
     display: inline;
 }
 .element-calendrier .ensavoirplus{
-    /*background-color: black;*/
-    height:1.2em;
-    /*border: 2px solid white;*/
-    /*color:blanchedalmond;*/
-    color: #feba12;
+    background-color: black;
+    height:1.5em;
+    border: 2px solid white;
+    color:blanchedalmond;
     float:right;
-    margin-right: 5px;
-    position:auto;
-    bottom:2px;
-    right:2px;
+    position:absolute;
+    bottom:0;
+    right:0;
+    opacity: 0.7;
 }
 
-.element-calendrier .ensavoirplus:hover{
-  opacity: 0.3;
-}
 #Cours , #Spectacle , #Atelier , #Conference, #Diffusion{
   color: #feba12;
 }
@@ -143,8 +139,6 @@ margin-left: 400px;
   }
 .zoom{
     transition: transform .2s;
-    background-color:#131416;
-    border: 2px solid white;
 }
 .zoom:hover {
     transform: scale(1.1); 
@@ -198,10 +192,6 @@ margin-left: 400px;
   padding:0;
 }
 
-#boite2 button:hover{
-  opacity: 0.7;
-}
-
 .plan:hover {
   opacity: 0.4;
 }
@@ -209,13 +199,12 @@ margin-left: 400px;
 /* partie menu déroulant */
 
 nav{
-    background-color: #131416;
-    width: 98%;
-    height: 60px;
-    margin-left: 10px;
+    /*background-color: rgb(248, 248, 248);*/
+    width: 100%;
+    height:70px;
+    margin: 0;
     position: relative;
-    border-radius: 14px;
-    border: 2px solid white;
+    top: 0px;
 }
 nav ul{
     list-style-type: none;
@@ -224,11 +213,9 @@ nav ul{
 
 nav ul li{
     float: left;
-    width: 300px;
+    width: 20%;
     text-align: center;
     position: relative;
-    margin-top: -35px;
-    margin-bottom: 5px;
 }
 
 nav ul::after{  /*ce qui se passe directement après ul*/
@@ -242,26 +229,26 @@ nav a{
     text-decoration: none;
     color: rgb(255, 255, 255);
     border-bottom: 2px solid transparent;
-    padding: 10px;
-    /*background: #131416;*/
-    /*border-radius: 14px;*/
+    padding: 10px 0px;
+    background: #131416;
+    border-radius: 14px;
+    
 }
-/*
-nav a:hover{   /*lorsqu'on survole un bouton*//*
+
+nav a:hover{   /*lorsqu'on survole un bouton*/
 color: rgba(255, 0, 0, 0.884);
 border-bottom: 2px solid red;
 }
-*/
+
 .sous2
 {
   font-size: 1.3em;
-  /*background: #131416;*/
-  /*border-radius: 14px;*/
-  /*border: 2px solid white;*/
+  background: #131416;
+  border-radius: 14px;
 }
 
 #evenement .sous2{
-  margin-left: 40px;
+  margin-left: 100px;
 }
 
 nav > ul li:hover .sous2{
@@ -269,23 +256,32 @@ nav > ul li:hover .sous2{
 }
 .sous2 li{
     display: flex;
-    justify-content: space-between;
     float: none;
-    margin-left: 5px;
+    width: 100%;
 }
 .sous2 a{
     padding: 10px;
     text-align: center;
-    /*border-right: 2px solid rgb(255, 255, 255);
-    border-left: 2px solid rgb(255, 255, 255);*/
 }
 .sous2 a:hover{
-    color: #feba12;
-    /* border-right: 2px solid red; */
+    border-bottom: 2px solid red;
     /*background-color: RGBa(200,200,200,0.1);*/
 }
+.deroulant
+{
+  text-decoration: none;
+  margin-left: 100px;
+  font-size: 1.3em;
+  background:#131416;
+  border-radius: 14px;
+}
+.deroulant > a::after{
+    content:" ▼";
+    font-size: 12px;
+}
 
-                                                                /* menu burger */
+/* menu burger */
+
 
 a
 {
@@ -306,10 +302,11 @@ color: #feba12;
 {
 display: block;
 position: relative;
-top: 20px;
-left: 25px;
-width: 10%;
+top: 50px;
+left: 50px;
+width: 20%;
 z-index: 1;
+
 -webkit-user-select: none;
 user-select: none;
 }
@@ -324,6 +321,7 @@ height: 32px;
 position: absolute;
 top: -7px;
 left: -5px;
+
 cursor: pointer;
 
 opacity: 0; /* hide this */
@@ -404,7 +402,7 @@ transform: rotate(-45deg) translate(0, -1px);
 {
 position: absolute;
 width: 400px;
-margin: -76px 0 0 -37px;
+margin: -76px 0 0 -50px;
 padding: 50px;
 padding-top: 125px;
 background: #131416;
@@ -425,15 +423,6 @@ transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 {
 padding: 10px 0;
 font-size: 30px;
-}
-
-#menu td a{
-  border-radius: 14px;
-}
-
-#menu td a:hover{
-  border-bottom: 2px solid rgb(206, 26, 26);
-  color: rgb(206, 26, 26);
 }
 
 /*
