--- a/billeterie.css
+++ b/billeterie.css
@@ -221,12 +221,13 @@ margin-left: 400px;
 /* partie menu déroulant */
 
 nav{
-    /*background-color: rgb(248, 248, 248);*/
-    width: 100%;
-    height:70px;
-    margin: 0;
+    background-color: #131416;
+    width: 98%;
+    height: 60px;
+    margin-left: 10px;
     position: relative;
-    top: 0px;
+    border-radius: 14px;
+    border: 2px solid white;
 }
 nav ul{
     list-style-type: none;
@@ -235,9 +236,11 @@ nav ul{
 
 nav ul li{
     float: left;
-    width: 20%;
+    width: 300px;
     text-align: center;
     position: relative;
+    margin-top: -35px;
+    margin-bottom: 5px;
 }
 
 nav ul::after{  /*ce qui se passe directement après ul*/
@@ -251,36 +254,26 @@ nav a{
     text-decoration: none;
     color: rgb(255, 255, 255);
     border-bottom: 2px solid transparent;
-    padding: 10px 0px;
-    background: #131416;
-    border-radius: 14px;
-    
+    padding: 10px;
+    /*background: #131416;*/
+    /*border-radius: 14px;*/
 }
-
-nav a:hover{   /*lorsqu'on survole un bouton*/
+/*
+nav a:hover{   /*lorsqu'on survole un bouton*//*
 color: rgba(255, 0, 0, 0.884);
 border-bottom: 2px solid red;
 }
-
-/*
-.sous{
-    display: none;
-    /*box-shadow: 0px 1px 2px white;*/
-    /*background-color: white;*//*
-    position: absolute;
-    width: 100%;
-    z-index: 1000;
-}*/
-
+*/
 .sous2
 {
   font-size: 1.3em;
-  background: #131416;
-  border-radius: 14px;
+  /*background: #131416;*/
+  /*border-radius: 14px;*/
+  /*border: 2px solid white;*/
 }
 
 #evenement .sous2{
-  margin-left: 100px;
+  margin-left: 40px;
 }
 
 nav > ul li:hover .sous2{
@@ -288,43 +281,24 @@ nav > ul li:hover .sous2{
 }
 .sous2 li{
     display: flex;
+    justify-content: space-between;
     float: none;
-    width: 100%;
+    margin-left: 5px;
 }
 .sous2 a{
     padding: 10px;
     text-align: center;
+    /*border-right: 2px solid rgb(255, 255, 255);
+    border-left: 2px solid rgb(255, 255, 255);*/
 }
-
 .sous2 a:hover{
-    border-bottom: 2px solid red;
+    color: #feba12;
+    /* border-right: 2px solid red; */
     /*background-color: RGBa(200,200,200,0.1);*/
 }
-.deroulant
-{
-text-decoration: none;
-margin-left: 100px;
-font-size: 1.3em;
-background: #131416;
-border-radius: 14px;
-}
 
-.deroulant > a::after{
-    content:" ▼";
-    font-size: 12px;
-}
+                                                                /* menu burger */
 
-/* menu burger */
-
-a.external:link
-    {color: #0000ff; font-size: 10pt; font-weight: bold; }
-a.external:visited 
-    {color: #894f7b; font-weight: bold; }
-a.external:hover
-    {text-decoration: overline; background-color: #003399; }
-a.external:active
-    {color: red; }	
-    
 a
 {
     text-decoration: none;
@@ -344,11 +318,10 @@ color: #feba12;
 {
 display: block;
 position: relative;
-top: 50px;
-left: 50px;
-width: 20%;
+top: 20px;
+left: 25px;
+width: 10%;
 z-index: 1;
-
 -webkit-user-select: none;
 user-select: none;
 }
@@ -363,7 +336,6 @@ height: 32px;
 position: absolute;
 top: -7px;
 left: -5px;
-
 cursor: pointer;
 
 opacity: 0; /* hide this */
@@ -444,7 +416,7 @@ transform: rotate(-45deg) translate(0, -1px);
 {
 position: absolute;
 width: 400px;
-margin: -76px 0 0 -50px;
+margin: -76px 0 0 -37px;
 padding: 50px;
 padding-top: 125px;
 background: #131416;
@@ -465,6 +437,15 @@ transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 {
 padding: 10px 0;
 font-size: 30px;
+}
+
+#menu td a{
+  border-radius: 14px;
+}
+
+#menu td a:hover{
+  border-bottom: 2px solid rgb(206, 26, 26);
+  color: rgb(206, 26, 26);
 }
 
 /*
