--- a/index.css
+++ b/index.css
@@ -119,100 +119,6 @@ button
   opacity: 0.4;
 }
 
-/* partie menu déroulant */
-
-nav{
-    /*background-color: rgb(248, 248, 248);*/
-    width: 100%;
-    height:70px;
-    margin: 0;
-    position: relative;
-    top: 0px;
-}
-nav ul{
-    list-style-type: none;
-    font-family : Georgia ;
-}
-
-nav ul li{
-    float: left;
-    width: 20%;
-    text-align: center;
-    position: relative;
-}
-
-nav ul::after{  /*ce qui se passe directement après ul*/
-    content: "";
-    display: table;
-    clear: both;
-}
-
-nav a{
-    display: block;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    border-bottom: 2px solid transparent;
-    padding: 10px 0px;
-    background: #131416;
-    border-radius: 14px;
-    
-}
-
-nav a:hover{   /*lorsqu'on survole un bouton*/
-  color: rgba(255, 0, 0, 0.884);
-  border-bottom: 2px solid red;
-}
-/*
-.sous{
-    display: none;
-    position: absolute;
-    width: 100%;
-    margin-left: 100px;
-    z-index: 1000;
-}
-*/
-.sous2
-{
-  font-size: 1.3em;
-  background: #131416;
-  border-radius: 14px;
-}
-
-#evenement .sous2{
-  margin-left: 100px;
-}
-
-nav > ul li:hover .sous2{
-  display: block;
-}
-.sous2 li{
-  display: flex;
-  float: none;
-  width: 100%;
-}
-.sous2 a{
-  padding: 10px;
-  text-align: center;
-}
-
-.sous2 a:hover{
-    border-bottom: 2px solid red;
-    /*background-color: RGBa(200,200,200,0.1);*/
-}
-.deroulant
-{
-  text-decoration: none;
-  margin-left: 100px;
-  font-size: 1.3em;
-  background: #131416;
-  border-radius: 14px;
-}
-
-.deroulant > a::after{
-    content:" ▼";
-    font-size: 12px;
-}
-
 /* partie animation images */
 
 .slider {
@@ -283,159 +189,236 @@ nav > ul li:hover .sous2{
     }
 }
 
-/* menu burger */
+/* partie menu déroulant */
 
-a.external:link
-	{color: #0000ff; font-size: 10pt; font-weight: bold; }
-a.external:visited 
-	{color: #894f7b; font-weight: bold; }
-a.external:hover
-	{text-decoration: overline; background-color: #003399; }
-a.external:active
-	{color: red; }	
-	
+nav{
+  background-color: #131416;
+  width: 98%;
+  height: 60px;
+  margin-left: 10px;
+  position: relative;
+  border-radius: 14px;
+  border: 2px solid white;
+}
+nav ul{
+  list-style-type: none;
+  font-family : Georgia ;
+}
+
+nav ul li{
+  float: left;
+  width: 300px;
+  text-align: center;
+  position: relative;
+  margin-top: -35px;
+  margin-bottom: 5px;
+}
+
+nav ul::after{  /*ce qui se passe directement après ul*/
+  content: "";
+  display: table;
+  clear: both;
+}
+
+nav a{
+  display: block;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  border-bottom: 2px solid transparent;
+  padding: 10px;
+  /*background: #131416;*/
+  /*border-radius: 14px;*/
+}
+/*
+nav a:hover{   /*lorsqu'on survole un bouton*//*
+color: rgba(255, 0, 0, 0.884);
+border-bottom: 2px solid red;
+}
+*/
+.sous2
+{
+font-size: 1.3em;
+/*background: #131416;*/
+/*border-radius: 14px;*/
+/*border: 2px solid white;*/
+}
+
+#evenement .sous2{
+margin-left: 40px;
+}
+
+nav > ul li:hover .sous2{
+  display: block;
+}
+.sous2 li{
+  display: flex;
+  justify-content: space-between;
+  float: none;
+  margin-left: 5px;
+}
+.sous2 a{
+  padding: 10px;
+  text-align: center;
+  /*border-right: 2px solid rgb(255, 255, 255);
+  border-left: 2px solid rgb(255, 255, 255);*/
+}
+.sous2 a:hover{
+  color: #feba12;
+  /* border-right: 2px solid red; */
+  /*background-color: RGBa(200,200,200,0.1);*/
+}
+
+                                                              /* menu burger */
+
 a
 {
-	text-decoration: none;
-	color: #00437c;
-	transition: color 0.3s ease;
+  text-decoration: none;
+  color: #00437c;
+  transition: color 0.3s ease;
   font-size: 23px;
 }
 
+/*a:hover
+{
+color: #feba12;
+}*/
 /*
- * ...this controls the actual 3 line menu position, the 'burger'...
- */
+* ...this controls the actual 3 line menu position, the 'burger'...
+*/
 #menuToggle
 {
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  width: 20%;
-  z-index: 1;
-  
-  -webkit-user-select: none;
-  user-select: none;
+display: block;
+position: relative;
+top: 20px;
+left: 25px;
+width: 10%;
+z-index: 1;
+-webkit-user-select: none;
+user-select: none;
 }
 /*
- * ...this will change the touch/click area size...
- */
+* ...this will change the touch/click area size...
+*/
 #menuToggle input
 {
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
+display: block;
+width: 40px;
+height: 32px;
+position: absolute;
+top: -7px;
+left: -5px;
+cursor: pointer;
+
+opacity: 0; /* hide this */
+z-index: 2; /* and place it over the hamburger */
+
+-webkit-touch-callout: none;
 }
 
 /*
- * Just a quick hamburger
-	...this controls the physical size of the 3 lines in the burger...
- */
+* Just a quick hamburger
+  ...this controls the physical size of the 3 lines in the burger...
+*/
 #menuToggle span
 {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  
-  background: #ffffff; 
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
+display: block;
+width: 33px;
+height: 4px;
+margin-bottom: 5px;
+position: relative;
+
+background: #ffffff; 
+border-radius: 3px;
+
+z-index: 1;
+
+transform-origin: 4px 0px;
+
+transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+          background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+          opacity 0.55s ease;
 }
 
 #menuToggle span:first-child
 {
-  transform-origin: 0% 0%;
+transform-origin: 0% 0%;
 }
 
 #menuToggle span:nth-last-child(2)
 {
-  transform-origin: 0% 100%;
+transform-origin: 0% 100%;
 }
 
 /* 
- * Transforms all the slices of hamburger
- * into a crossmark.
- */
+* Transforms all the slices of hamburger
+* into a crossmark.
+*/
 #menuToggle input:checked ~ span
 {
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #ffffff;
+opacity: 1;
+transform: rotate(45deg) translate(-2px, -1px);
+background: #ffffff;
 }
 
 /*
- * But let's hide the middle one.
- */
+* But let's hide the middle one.
+*/
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
+opacity: 0;
+transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 /*
- * Oh yeah and the last one should go the other direction
- */
+* Oh yeah and the last one should go the other direction
+*/
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
-  transform: rotate(-45deg) translate(0, -1px);
+transform: rotate(-45deg) translate(0, -1px);
 }
 
 /*
- * Make this absolute positioned
- * at the top left of the screen
+* Make this absolute positioned
+* at the top left of the screen
 
-	...This is the burgers popup location on your webpage, as well as the size and colour of the popup...
- */
+  ...This is the burgers popup location on your webpage, as well as the size and colour of the popup...
+*/
 #menu
 {
-  position: absolute;
-  width: 400px;
-  margin: -76px 0 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
-  background: #131416;
-  border-style:groove;
-  border-color: #ffffff;
-  
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-  
-  transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+position: absolute;
+width: 400px;
+margin: -76px 0 0 -37px;
+padding: 50px;
+padding-top: 125px;
+background: #131416;
+border-style:groove;
+border-color: #ffffff;
+
+list-style-type: none;
+-webkit-font-smoothing: antialiased;
+/* to stop flickering of text in safari */
+
+transform-origin: 0% 0%;
+transform: translate(-100%, 0);
+
+transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
 #menu li
 {
-  padding: 10px 0;
-  font-size: 30px;
-  border-radius: 14px;
+padding: 10px 0;
+font-size: 30px;
 }
 
-#menu li:hover{
-  border-bottom: 2px solid red;
+#menu td a{
+border-radius: 14px;
 }
+
+#menu td a:hover{
+border-bottom: 2px solid rgb(206, 26, 26);
+color: rgb(206, 26, 26);
+}
+
 /*
  * And let's slide it in from the left
  */
